--- a/resume.tex
+++ b/resume.tex
@@ -41,29 +41,26 @@
 \href{http://www.ubcengineeringcoop.com}{ubcengineeringcoop.com}
 \href{tel:604-822-3022}{(604) 822-3022}
 \section{Programming}
-C/ C++
-C\#
-Objective C (iOS Apps)
-VHDL Circuit Synthesis
-Java
 Assembly (68k and 8052)
-Python
-HTML/ CSS/ jQuery/ JavaScript
-Google Script
 Bash Script
+C/ C++
+HTML/ CSS/ JavaScript
+Java
+Python
+Scala
 \section{Computers and Progams}
-Microsoft/ Libre Office
 Computer Repair
-Microsoft Windows
-Mac OS X
-Linux (Ubuntu)
 Git
+Linux (Ubuntu)
+Mac OS X
+Microsoft Windows
+Microsoft/ Libre Office
 \section{Electronics}
+Breadboard
 Microcontrollers
+Multimeters
 Oscilloscopes
 Signal Generators
-Multimeters
-Breadboard
 Soldering
 \end{aside}
 
@@ -78,15 +75,8 @@ Soldering
 {}
 {Academic Program}
 {}
-{5 of 8 academic terms completed\\
-Anticipated date of graduation: May, 2017
-}
-\entry
-{}
-{Co-op Status}
-{}
-{Completed 2/5 work terms; available for 4 months beginning September,
-2015
+{
+Anticipated date of graduation: May, 2018
 }
 \end{entrylist}
 
@@ -97,6 +87,16 @@ Anticipated date of graduation: May, 2017
 
 \begin{entrylist}
 
+\entry
+{May 2016--\\Present}
+{UBC {\normalfont Big Data Research}}
+{Vancouver, BC}
+{
+\begin{itemize}
+\item Goal: To share memory (RDDs) across Apache Spark instances through a
+unified memory manager.
+\end{itemize}
+}
 \entry
 {January 2015--\\August 2015}
 {Ericsson {\normalfont Software Developer Co-op}}
