Updated Contact info

--- a/resume.tex
+++ b/resume.tex
@@ -35,7 +35,8 @@
 \section{Contact}
 \href{mailto:steven@stmhall.ca}{steven@stmhall.ca}
 \href{http://stmhall.ca}{stmhall.ca}
-\href{http://github.com/hallzy}{github.com/hallzy}
+\href{http://github.com/hallzy}{GitHub}
+\href{https://www.linkedin.com/in/steventmhall}{LinkedIn}
 \section{Programming}
 Assembly (68k and 8052)
 Bash Script
