Added a keyword section

--- a/resume.tex
+++ b/resume.tex
@@ -20,8 +20,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
+\usepackage{xcolor}
 
-\addbibresource{bibliography.bib} % Specify the bibliography file to include publications
 
 \begin{document}
 
@@ -330,6 +330,283 @@ Hockey \\
 Guitar \\
 Fixing Computers \\
 Fixing/ Replacing Car part \\
+
+
+% Software Specific
+\keyword
+{
+Agile
+Applications
+ASP.NET
+Build
+C\#
+Code
+Collaborate
+Data
+Design
+Development
+Engineering
+Environment
+Java
+Javascript
+Knowledge
+Mobile
+.NET
+Product
+Projects
+Software
+Solutions
+SQL
+Team
+Technologies
+Testing
+Tools
+Web
+}
+
+% General
+\keyword
+{
+Planned
+analyzed
+chaired
+approved
+expanded
+repaired
+installed
+appraised
+commanded
+assembled
+expedited
+replaced
+instructed
+arranged
+controlled
+assumed
+extended
+restored
+lectured
+created
+coordinated
+attached
+facilitated
+simplified
+maintained
+designed
+designated
+attained
+formulated
+sponsored
+perfected
+developed
+eliminated
+balanced
+hired
+devised
+founded
+bought
+implemented
+supplemented
+solved
+discovered
+governed
+budgeted
+improved
+surpassed
+taught
+drafted
+guided
+built
+estimated
+handled
+classified
+examined
+influenced
+combined
+innovated
+instituted
+completed
+interpreted
+maintained
+condensed
+maximized
+verified
+mapped
+negotiated
+consolidated
+measured
+operated
+converted
+modernized
+accommodated
+counseled
+organized
+prescribed
+created
+planned
+regulated
+curtained
+motivated
+applied
+displayed
+prepared
+removed
+delivered
+notified
+assisted
+exhibited
+produced
+supervised
+demonstrated
+observed
+communicated
+familiarized
+projected
+transferred
+disclosed
+obtained
+diagnosed
+illustrated
+employed
+promoted
+endorsed
+discontinued
+operated
+disclosed
+dispatched
+procured
+edited
+scheduled
+vetoed
+informed
+solved
+increased
+terminated
+strengthened
+revised
+minimized
+Serviced
+initiated
+transformed
+Advised
+evaluated
+headed
+collected
+determined
+directed
+augmented
+grouped
+stabilized
+resolved
+introduced
+unified
+acquainted
+modified
+aided
+demonstrated
+advocated
+inventoried
+updated
+advertised
+invested
+utilized
+advised
+investigated
+managed
+conducted
+merged
+conferred
+consulted
+instructed
+studied
+Executed
+economized
+produced
+educated
+notified
+accomplished
+publicized
+Directed
+achieved
+encouraged
+published
+guaranteed
+recommended
+adapted
+activated
+established
+rectified
+guided
+reported
+broad-minded
+discrete
+imaginative
+personable
+conscientious
+economical
+independent
+pleasant
+assigned
+administered
+estimated
+reduced
+improved
+suggested
+authorized
+altered
+exchanged
+reorganized
+active
+consistent
+efficient
+logical
+positive
+sincere
+adaptable
+constructive
+loyal
+practical
+aggressive
+creative
+productive
+systematic
+ambitious
+determined
+objective
+reliable
+diplomatic
+fair
+resourceful
+will
+energetic
+sophisticated
+enterprising
+mature
+alert
+dependable
+enthusiastic
+methodical
+realistic
+tactful
+extroverted
+talented
+analytical
+optimistic
+relocated
+attentive
+disciplined
+forceful
+perceptive
+respective
+will
+travel
+informed
+self-reliant
+sense-of-humor
+sense-of-humour
+sense of humor
+sense of humour
+}
 
 \newpage
 
