--- a/resume.tex
+++ b/resume.tex
@@ -37,14 +37,14 @@
 \href{http://stmhall.ca}{stmhall.ca}
 \href{http://github.com/hallzy}{GitHub}
 \href{https://www.linkedin.com/in/steventmhall}{LinkedIn}
-\section{Programming}
+\section{Languages}
 Assembly (68k and 8052)
 Bash Script
 C/ C++
 HTML/ CSS/ JavaScript
 Java
+mySQL
 Python
-Scala
 \section{Computers and Progams}
 Computer Repair
 Git
@@ -64,7 +64,7 @@ Soldering
 %----------------------------------------------------------------------------------------
 %  Academic and Co-op Status
 %----------------------------------------------------------------------------------------
-\section{Academic and Co-op Status}
+\section{Academic Status}
 
 \begin{entrylist}
 
@@ -85,7 +85,7 @@ Anticipated date of graduation: May, 2018
 \begin{entrylist}
 
 \entry
-{May 2016--\\Present}
+{May 2016--\\August 2016}
 {UBC {\normalfont Big Data Research}}
 {Vancouver, BC}
 {
@@ -117,6 +117,23 @@ unified memory manager.
 \begin{entrylist}
 
 \entry
+{September 2016--\\Present}
+{Capstone {\normalfont IoT Based Livestock Bio-Signal Monitoring and Management System}}
+{}
+{
+\begin{itemize}
+\item Construct cattle eartags that comply with Canadian Cattle Identification
+  Agency (CCIA) standards that track vital information such as heart rate, body
+    temperature, and respiration rate.
+\item The information is stored on the tag until the time comes for the
+  data to be transferred wirelessly through a mesh network of cattle to a
+    gateway for further processing. The data is then displayed in
+    a web application for the end users.
+\item This is designed to identify sick animals before the disease spreads
+  across the farm
+\end{itemize}
+}
+\entry
 {April 2014}
 {Electromagnetically Tethered Robot}
 {}
@@ -146,23 +163,23 @@ current time, set an alarm time, and
 have the alarm sound a buzzer at 2kHz once the alarm time is reached.
 \end{itemize}
 }
-\entry
-{August 2012}
-{Laptop Repair}
-{}
-{
-\begin{itemize}
-\item Disassembled a nonfunctional laptop, testing various components, and learnt what
-different parts of the
-motherboard accomplish, allowing for increased knowledge of how a computer
-works, and what different parts of
-a motherboard are.
-\item Repaired a laptop by reflowing the solder on the motherboard, allowing the
-solder to melt just enough to fill in
-any potential electrical breaks in the circuit that may have appeared over time,
-resulting in a working laptop.
-\end{itemize}
-}
+% \entry
+% {August 2012}
+% {Laptop Repair}
+% {}
+% {
+% \begin{itemize}
+% \item Disassembled a nonfunctional laptop, testing various components, and learnt what
+% different parts of the
+% motherboard accomplish, allowing for increased knowledge of how a computer
+% works, and what different parts of
+% a motherboard are.
+% \item Repaired a laptop by reflowing the solder on the motherboard, allowing the
+% solder to melt just enough to fill in
+% any potential electrical breaks in the circuit that may have appeared over time,
+% resulting in a working laptop.
+% \end{itemize}
+% }
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
