Don't hyphenate words at the EOL

--- a/resume.tex
+++ b/resume.tex
@@ -21,6 +21,7 @@
 
 \documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
 \usepackage{xcolor}
+\usepackage[none]{hyphenat}
 
 
 \begin{document}
