Fixed some formatting

--- a/resume.tex
+++ b/resume.tex
@@ -28,9 +28,9 @@
 
 \header{Steven}{Hall}{Computer Engineering} % Your name and current job title/field
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  SIDEBAR SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{Contact}
@@ -61,9 +61,9 @@ Signal Generators
 Soldering
 \end{aside}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  Academic and Co-op Status
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \section{Academic Status}
 
 \begin{entrylist}
@@ -77,9 +77,9 @@ Anticipated date of graduation: May, 2018
 }
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  Technical Work Experience
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \section{Technical Work Experience}
 
 \begin{entrylist}
@@ -101,17 +101,17 @@ unified memory manager.
 {
 \begin{itemize}
 \item Tested and developed quality of service and policy based routing software
-  solutions on a variety of Ericsson's routing platforms using a combination of manual
-  router configurations and scripts for testing.
+solutions on a variety of Ericsson's routing platforms using a combination of
+manual router configurations and scripts for testing.
 \item Presented demos showing the functionality and progress of policy based
-  routing during the testing and development phases.
+routing during the testing and development phases.
 \end{itemize}
 }
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  Technical Projects
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \section{Technical Projects}
 
 \begin{entrylist}
@@ -139,9 +139,8 @@ unified memory manager.
 {}
 {
 \begin{itemize}
-\item Constructed a robot using one sold piece of aluminum resulting in usable parts
-that we used for the remote and
-robot.
+\item Constructed a robot using one sold piece of aluminum resulting in usable
+parts that we used for the remote and robot.
 \item Designed, built, and programmed an autonomous robot that follows an
 electromagnetic signal produced by a
 solenoid on a remote that our group also built, resulting in a high grade. The
@@ -156,11 +155,10 @@ forward, and parallel park.
 {}
 {
 \begin{itemize}
-\item Programmed a simulation of an 8052 chip using an Altera DE2 Logic Board with
-Assembly to work as a 12-hour,
-am/pm clock, which resulted in an alarm clock that had the option to set the
-current time, set an alarm time, and
-have the alarm sound a buzzer at 2kHz once the alarm time is reached.
+\item Programmed a simulation of an 8052 chip using an Altera DE2 Logic Board
+with Assembly to work as a 12-hour, am/pm clock, which resulted in an alarm
+clock that had the option to set the current time, set an alarm time, and have
+the alarm sound a buzzer at 2kHz once the alarm time is reached.
 \end{itemize}
 }
 % \entry
@@ -182,9 +180,9 @@ have the alarm sound a buzzer at 2kHz once the alarm time is reached.
 % }
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  Other Work Experience
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \section{Other Work Experience}
 
 \begin{entrylist}
@@ -195,15 +193,12 @@ have the alarm sound a buzzer at 2kHz once the alarm time is reached.
 {Surrey, BC}
 {
 \begin{itemize}
-\item Fixed broken, slow, and non-responsive computers in a computer repair shop by
-replicating the customer’s
-problem, identifying the cause of the problem, and fixing the problem with the
-tools we had, resulting in satisfied
-customers.
+\item Fixed broken, slow, and non-responsive computers in a computer repair shop
+by replicating the customer’s problem, identifying the cause of the problem, and
+fixing the problem with the tools we had, resulting in satisfied customers.
 \item Techniques used to fix the computers include antivirus programs, file and
-registry manipulations, and taking the
-computers apart to diagnose hardware problems, resulting in faster, and better
-working computers.
+registry manipulations, and taking the computers apart to diagnose hardware
+problems, resulting in faster, and better working computers.
 \end{itemize}
 }
 
@@ -213,13 +208,12 @@ working computers.
 {Surrey, BC}
 {
 \begin{itemize}
-\item Broke stucco off the rear exterior wall of a house, fixed rotten parts of a
-leaking wall, and reapplied tar paper, as
-well as paved a pathway, resulting in a fixed wall, which could now be covered
-again with another material.
-\item Learned to use new power tools quickly in order to complete the job, including
-angle grinders and table saws,
-resulting in faster labour, and more experience with various tools.
+\item Broke stucco off the rear exterior wall of a house, fixed rotten parts of
+a leaking wall, and reapplied tar paper, as well as paved a pathway, resulting
+in a fixed wall, which could now be covered again with another material.
+\item Learned to use new power tools quickly in order to complete the job,
+including angle grinders and table saws, resulting in faster labour, and more
+experience with various tools.
 \end{itemize}
 }
 \entry
@@ -228,20 +222,18 @@ resulting in faster labour, and more experience with various tools.
 {Langley, BC}
 {
 \begin{itemize}
-\item Tutored a student in grade 10 science for their final exam by providing clear
-instructions and examples that they
-were able to understand, and apply in the exam, allowing the student to pass
-their test.
-\item Provided small tests with several questions on each to test understanding of
-the material, resulting in better
-preparation for the real final exam.
+\item Tutored a student in grade 10 science for their final exam by providing
+clear instructions and examples that they were able to understand, and apply in
+the exam, allowing the student to pass their test.
+\item Provided small tests with several questions on each to test understanding
+of the material, resulting in better preparation for the real final exam.
 \end{itemize}
 }
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  Volunteer Experience
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \section{Volunteer Experience}
 
 \begin{entrylist}
@@ -270,8 +262,8 @@ results.
 {North Delta, BC and Surrey, BC}
 {
 \begin{itemize}
-\item Worked with a group of coaches to coach a range of age groups over the three
-season period.
+\item Worked with a group of coaches to coach a range of age groups over the
+three season period.
 \item Duties include teaching how to play baseball by teaching proper throwing,
 catching, fielding, and hitting
 mechanics, resulting in increased performance by every player.
@@ -282,9 +274,9 @@ by giving easy to understand examples, resulting in constant improvement.
 }
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  EDUCATION SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
 \section{Education}
 
@@ -292,7 +284,7 @@ by giving easy to understand examples, resulting in constant improvement.
 %------------------------------------------------
 \entry
 {2013--Present}
-{University of British Columbia}  %{\normalfont of Applied Science in Computer Engineering (Software Option)}}
+{University of British Columbia}
 {Vancouver, BC}
 {Bachelors of Applied Science in Computer Engineering (Software Option)}
 %------------------------------------------------
@@ -303,9 +295,9 @@ by giving easy to understand examples, resulting in constant improvement.
 {Engineering Certificate}
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  AWARDS SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
 \section{Awards}
 
@@ -319,9 +311,9 @@ by giving easy to understand examples, resulting in constant improvement.
 %------------------------------------------------
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  Professional Affiliations Section
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
 \section{Professional Affiliations}
 \begin{entrylist}
@@ -334,13 +326,12 @@ by giving easy to understand examples, resulting in constant improvement.
 %------------------------------------------------
 \end{entrylist}
 
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 %  INTERESTS SECTION
-%----------------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
 \section{Interests}
 
-%\textbf{professional:} genotyping by sequencing, genome refinement, programming, machine learning, teaching \\ \textbf{personal:} literature, running, travel
 Skiing/ Snowboarding \\
 Baseball – I played in the British Columbia Premier Baseball League for 2 years \\
 Hockey \\
