Updated my resume

--- a/resume.tex
+++ b/resume.tex
@@ -36,8 +36,8 @@
 \section{Contact}
 \href{mailto:steven@stmhall.ca}{steven@stmhall.ca}
 \href{http://stmhall.ca}{stmhall.ca}
-\href{http://github.com/hallzy}{GitHub}
-\href{https://www.linkedin.com/in/steventmhall}{LinkedIn}
+\href{http://github.com/hallzy}{GitHub: hallzy}
+\href{https://www.linkedin.com/in/steventmhall}{LinkedIn: steventmhall}
 \section{Languages}
 Assembly (68k and 8052)
 Bash Script
@@ -56,8 +56,6 @@ Microsoft/ Libre Office
 Breadboard
 Microcontrollers
 Multimeters
-Oscilloscopes
-Signal Generators
 Soldering
 \end{aside}
 
@@ -117,20 +115,20 @@ routing during the testing and development phases.
 \begin{entrylist}
 
 \entry
-{September 2016--\\Present}
+{September 2016--\\April 2017}
 {Capstone {\normalfont IoT Based Livestock Bio-Signal Monitoring and Management System}}
 {}
 {
 \begin{itemize}
 \item Construct cattle eartags that comply with Canadian Cattle Identification
-  Agency (CCIA) standards that track vital information such as heart rate, body
-    temperature, and respiration rate.
+Agency (CCIA) standards which track vital information such as heart rate, body
+temperature, and rumination patterns.
 \item The information is stored on the tag until the time comes for the
-  data to be transferred wirelessly through a mesh network of cattle to a
-    gateway for further processing. The data is then displayed in
-    a web application for the end users.
-\item This is designed to identify sick animals before the disease spreads
-  across the farm
+data to be transferred wirelessly through a mesh network of cattle to a gateway
+for further processing. The data is then displayed in a web application for the
+end users.
+\item This is designed to identify sick animals early to keep medical costs low
+and prevent more livestock from getting sick.
 \end{itemize}
 }
 \entry
