--- a/resume.tex
+++ b/resume.tex
@@ -49,13 +49,10 @@ Python
 Computer Repair
 Git
 Linux (Ubuntu)
-Mac OS X
 Microsoft Windows
 Microsoft/ Libre Office
 \section{Electronics}
-Breadboard
 Microcontrollers
-Multimeters
 Soldering
 \end{aside}
 
@@ -99,7 +96,17 @@ routing during the testing and development phases.
 \begin{entrylist}
 
 \entry
-{September 2016--\\April 2017}
+{November 2017\\}
+  {Web Application {\normalfont Online Store}}
+{}
+{
+\begin{itemize}
+\item Built a web application that mimicks an online store using AJAX requests
+and mongoDB
+\end{itemize}
+}
+\entry
+{April 2017}
 {Capstone {\normalfont IoT Based Livestock Bio-Signal Monitoring and Management System}}
 {}
 {
@@ -129,18 +136,6 @@ solenoid on a remote that our group also built, resulting in a high grade. The
 remote sends binary data through
 the magnetic field that tell the robot to spin 180 degrees, move back, move
 forward, and parallel park.
-\end{itemize}
-}
-\entry
-{January 2014}
-{Alarm Clock}
-{}
-{
-\begin{itemize}
-\item Programmed a simulation of an 8052 chip using an Altera DE2 Logic Board
-with Assembly to work as a 12-hour, am/pm clock, which resulted in an alarm
-clock that had the option to set the current time, set an alarm time, and have
-the alarm sound a buzzer at 2kHz once the alarm time is reached.
 \end{itemize}
 }
 \end{entrylist}
@@ -179,19 +174,6 @@ in a fixed wall, which could now be covered again with another material.
 \item Learned to use new power tools quickly in order to complete the job,
 including angle grinders and table saws, resulting in faster labour, and more
 experience with various tools.
-\end{itemize}
-}
-\entry
-{June 2013}
-{Self Employed {\normalfont High School Science Tutor}}
-{Langley, BC}
-{
-\begin{itemize}
-\item Tutored a student in grade 10 science for their final exam by providing
-clear instructions and examples that they were able to understand, and apply in
-the exam, allowing the student to pass their test.
-\item Provided small tests with several questions on each to test understanding
-of the material, resulting in better preparation for the real final exam.
 \end{itemize}
 }
 \end{entrylist}
@@ -239,38 +221,23 @@ mechanics, resulting in increased performance by every player.
 {Engineering Certificate}
 \end{entrylist}
 
+% \newpage
+
 %-------------------------------------------------------------------------------
 %  AWARDS SECTION
 %-------------------------------------------------------------------------------
 
-\newpage
+%\section{Awards}
 
-\section{Awards}
-
-\begin{entrylist}
-%------------------------------------------------
-\entry
-{2012}
-{Coaching Staff of the Year (Highest voted coaching staff in the league)}
-{}
-{Surrey Canadian Baseball Association}
-%------------------------------------------------
-\end{entrylist}
-
-%-------------------------------------------------------------------------------
-%  Professional Affiliations Section
-%-------------------------------------------------------------------------------
-
-\section{Professional Affiliations}
-\begin{entrylist}
-%------------------------------------------------
-\entry
-{}
-{APEGBC Member Advantage Program for Students (MAPs)}
-{}
-{}
-%------------------------------------------------
-\end{entrylist}
+%\begin{entrylist}
+%%------------------------------------------------
+%\entry
+%{2012}
+%{Coaching Staff of the Year (Highest voted coaching staff in the league)}
+%{}
+%{Surrey Canadian Baseball Association}
+%%------------------------------------------------
+%\end{entrylist}
 
 %-------------------------------------------------------------------------------
 %  INTERESTS SECTION
@@ -278,12 +245,10 @@ mechanics, resulting in increased performance by every player.
 
 \section{Interests}
 
-Skiing/ Snowboarding \\
-Baseball – I played in the British Columbia Premier Baseball League for 2 years \\
-Hockey \\
-Lacrosse \\
+Programming, Computers \\
+Skiing, Snowboarding \\
+Baseball, Hockey, Lacrosse \\
 Guitar \\
-Fixing Computers \\
 
 
 % Software Specific
@@ -316,11 +281,7 @@ Technologies
 Testing
 Tools
 Web
-}
-
 % General
-\keyword
-{
 Planned
 analyzed
 chaired
