--- a/resume.tex
+++ b/resume.tex
@@ -128,7 +128,7 @@ and prevent more livestock from getting sick.
 {}
 {
 \begin{itemize}
-\item Constructed a robot using one sold piece of aluminum resulting in usable
+\item Constructed a robot using one solid piece of aluminum resulting in usable
 parts that we used for the remote and robot.
 \item Designed, built, and programmed an autonomous robot that follows an
 electromagnetic signal produced by a
@@ -212,7 +212,7 @@ mechanics, resulting in increased performance by every player.
 {2013--2017}
 {University of British Columbia}
 {Vancouver, BC}
-{Bachelors of Applied Science in Computer Engineering (Software Option)}
+{Bachelor of Applied Science in Computer Engineering (Software Option)}
 %------------------------------------------------
 \entry
 {2012--2013}
