--- a/resume.tex
+++ b/resume.tex
@@ -43,9 +43,9 @@ Assembly (68k and 8052)
 Bash Script
 C/ C++
 HTML/ CSS/ JavaScript
-mySQL
+MySQL
 Python
-\section{Computers and Progams}
+\section{Computers and Programs}
 Computer Repair
 Git
 Linux (Ubuntu)
@@ -101,8 +101,8 @@ routing during the testing and development phases.
 {}
 {
 \begin{itemize}
-\item Built a web application that mimicks an online store using AJAX requests
-and mongoDB
+\item Built a web application that mimics an online store using AJAX requests
+and MongoDB
 \end{itemize}
 }
 \entry
@@ -267,7 +267,7 @@ Development
 Engineering
 Environment
 Java
-Javascript
+JavaScript
 Knowledge
 Mobile
 .NET
@@ -354,7 +354,7 @@ operated
 converted
 modernized
 accommodated
-counseled
+counselled
 organized
 prescribed
 created
@@ -517,8 +517,8 @@ will
 travel
 informed
 self-reliant
-sense-of-humor
-sense-of-humour
+sense of humor
+sense of humour
 sense of humor
 sense of humour
 }
