Sorted the keywords

--- a/resume.tex
+++ b/resume.tex
@@ -282,245 +282,233 @@ Testing
 Tools
 Web
 % General
-Planned
-analyzed
-chaired
-approved
-expanded
-repaired
-installed
-appraised
-commanded
-assembled
-expedited
-replaced
-instructed
-arranged
-controlled
-assumed
-extended
-restored
-lectured
-created
-coordinated
-attached
-facilitated
-simplified
-maintained
-designed
-designated
-attained
-formulated
-sponsored
-perfected
-developed
-eliminated
-balanced
-hired
-devised
-founded
-bought
-implemented
-supplemented
-solved
-discovered
-governed
-budgeted
-improved
-surpassed
-taught
-drafted
-guided
-built
-estimated
-handled
-classified
-examined
-influenced
-combined
-innovated
-instituted
-completed
-interpreted
-maintained
-condensed
-maximized
-verified
-mapped
-negotiated
-consolidated
-measured
-operated
-converted
-modernized
 accommodated
-counselled
-organized
-prescribed
-created
-planned
-regulated
-curtained
-motivated
-applied
-displayed
-prepared
-removed
-delivered
-notified
-assisted
-exhibited
-produced
-supervised
-demonstrated
-observed
-communicated
-familiarized
-projected
-transferred
-disclosed
-obtained
-diagnosed
-illustrated
-employed
-promoted
-endorsed
-discontinued
-operated
-disclosed
-dispatched
-procured
-edited
-scheduled
-vetoed
-informed
-solved
-increased
-terminated
-strengthened
-revised
-minimized
-Serviced
-initiated
-transformed
-Advised
-evaluated
-headed
-collected
-determined
-directed
-augmented
-grouped
-stabilized
-resolved
-introduced
-unified
-acquainted
-modified
-aided
-demonstrated
-advocated
-inventoried
-updated
-advertised
-invested
-utilized
-advised
-investigated
-managed
-conducted
-merged
-conferred
-consulted
-instructed
-studied
-Executed
-economized
-produced
-educated
-notified
 accomplished
-publicized
-Directed
 achieved
-encouraged
-published
-guaranteed
-recommended
-adapted
+acquainted
 activated
-established
-rectified
-guided
-reported
-broad-minded
-discrete
-imaginative
-personable
-conscientious
-economical
-independent
-pleasant
-assigned
-administered
-estimated
-reduced
-improved
-suggested
-authorized
-altered
-exchanged
-reorganized
 active
-consistent
-efficient
-logical
-positive
-sincere
 adaptable
-constructive
-loyal
-practical
+adapted
+administered
+advertised
+advised
+advocated
 aggressive
-creative
-productive
-systematic
-ambitious
-determined
-objective
-reliable
-diplomatic
-fair
-resourceful
-will
-energetic
-sophisticated
-enterprising
-mature
+aided
 alert
-dependable
-enthusiastic
-methodical
-realistic
-tactful
-extroverted
-talented
+altered
+ambitious
 analytical
-optimistic
-relocated
+analyzed
+applied
+appraised
+approved
+arranged
+assembled
+assigned
+assisted
+assumed
+attached
+attained
 attentive
+augmented
+authorized
+balanced
+bought
+broad-minded
+budgeted
+built
+chaired
+classified
+collected
+combined
+commanded
+communicated
+completed
+condensed
+conducted
+conferred
+conscientious
+consistent
+consolidated
+constructive
+consulted
+controlled
+converted
+coordinated
+counselled
+created
+creative
+curtained
+delivered
+demonstrated
+dependable
+designated
+designed
+determined
+developed
+devised
+diagnosed
+diplomatic
+directed
 disciplined
+disclosed
+discontinued
+discovered
+discrete
+dispatched
+displayed
+drafted
+economical
+economized
+edited
+educated
+efficient
+eliminated
+employed
+encouraged
+endorsed
+energetic
+enterprising
+enthusiastic
+established
+estimated
+evaluated
+examined
+exchanged
+executed
+exhibited
+expanded
+expedited
+extended
+extroverted
+facilitated
+fair
+familiarized
 forceful
-perceptive
-respective
-will
-travel
+formulated
+founded
+fun
+funny
+governed
+grouped
+guaranteed
+guided
+handled
+hard working
+hard-working
+headed
+hired
+humor
+humorous
+humour
+humourous
+illustrated
+imaginative
+implemented
+improved
+increased
+independent
+influenced
 informed
+initiated
+innovated
+installed
+instituted
+instructed
+interpreted
+introduced
+inventoried
+invested
+investigated
+lectured
+logical
+loyal
+maintained
+managed
+mapped
+mature
+maximized
+measured
+merged
+methodical
+minimized
+modernized
+modified
+motivated
+negotiated
+notified
+objective
+observed
+obtained
+operated
+optimistic
+organized
+perceptive
+perfected
+personable
+planned
+pleasant
+positive
+practical
+prepared
+prescribed
+procured
+produced
+productive
+projected
+promoted
+publicized
+published
+realistic
+recommended
+rectified
+reduced
+regulated
+reliable
+relocated
+removed
+reorganized
+repaired
+replaced
+reported
+resolved
+resourceful
+respective
+restored
+revised
+scheduled
 self-reliant
 sense of humor
 sense of humour
-sense of humor
-sense of humour
+serviced
+simplified
+sincere
+solved
+sophisticated
+sponsored
+stabilized
+strengthened
+studied
+suggested
+supervised
+supplemented
+surpassed
+systematic
+tactful
+talented
+taught
+terminated
+transferred
+transformed
+travel
+unified
+updated
+utilized
+verified
+vetoed
+will
 }
 
 \newpage
