--- a/resume.tex
+++ b/resume.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 
-\header{Steven}{Hall}{Computer Engineering} % Your name and current job title/field
+\header{Steven}{Hall}{Software Engineering} % Your name and current job title/field
 
 %-------------------------------------------------------------------------------
 %  SIDEBAR SECTION
@@ -35,7 +35,6 @@
 \begin{aside} % In the aside, each new line forces a line break
 \section{Contact}
 \href{mailto:steven@stmhall.ca}{steven@stmhall.ca}
-\href{http://stmhall.ca}{stmhall.ca}
 \href{http://github.com/hallzy}{GitHub: hallzy}
 \href{https://www.linkedin.com/in/steventmhall}{LinkedIn: steventmhall}
 \section{Languages}
@@ -43,14 +42,14 @@ Assembly (68k and 8052)
 Bash Script
 C/ C++
 HTML/ CSS/ JavaScript
-MySQL
+MySQL/ mongoDB
 Python
 \section{Computers and Programs}
 Computer Repair
 Git
 Linux (Ubuntu)
 Microsoft Windows
-Microsoft/ Libre Office
+Vim
 \section{Electronics}
 Microcontrollers
 Soldering
