--- a/resume-no-phone.tex
+++ b/resume-no-phone.tex
@@ -63,7 +63,7 @@ Soldering
 \begin{entrylist}
 
 \entry
-{May 2016--\\August 2016}
+{May 2016--Aug 2016\\}
 {UBC {\normalfont Big Data Research}}
 {Vancouver, BC}
 {
@@ -73,7 +73,7 @@ unified memory manager.
 \end{itemize}
 }
 \entry
-{January 2015--\\August 2015}
+{Jan 2015--\\Aug 2015}
 {Ericsson {\normalfont Software Developer Co-op}}
 {Burnaby, BC}
 {
@@ -95,7 +95,7 @@ routing during the testing and development phases.
 \begin{entrylist}
 
 \entry
-{November 2017\\}
+{Nov 2017}
   {Web Application {\normalfont Online Store}}
 {}
 {
@@ -147,7 +147,7 @@ forward, and parallel park.
 \begin{entrylist}
 
 \entry
-{July 2014--\\August 2014}
+{Summer 2014}
 {ByteCom Computer Services {\normalfont Computer Repair Technician}}
 {Surrey, BC}
 {
@@ -161,20 +161,6 @@ problems, resulting in faster, and better working computers.
 \end{itemize}
 }
 
-\entry
-{July 2013--\\August 2013}
-{Self Employed {\normalfont Landscaping/ Labour}}
-{Surrey, BC}
-{
-\begin{itemize}
-\item Broke stucco off the rear exterior wall of a house, fixed rotten parts of
-a leaking wall, and reapplied tar paper, as well as paved a pathway, resulting
-in a fixed wall, which could now be covered again with another material.
-\item Learned to use new power tools quickly in order to complete the job,
-including angle grinders and table saws, resulting in faster labour, and more
-experience with various tools.
-\end{itemize}
-}
 \end{entrylist}
 
 %-------------------------------------------------------------------------------
@@ -185,16 +171,14 @@ experience with various tools.
 \begin{entrylist}
 
 \entry
-{April 2010--\\June 2013}
+{2010--2013}
 {North Delta Baseball Association and Surrey Canadian Baseball Association {\normalfont Assistant Coach}}
 {North Delta, BC and Surrey, BC}
 {
 \begin{itemize}
-\item Worked with a group of coaches to coach a range of age groups over the
-three season period.
-\item Duties include teaching how to play baseball by teaching proper throwing,
-catching, fielding, and hitting
-mechanics, resulting in increased performance by every player.
+\item Coached range of age groups over a three season period.
+\item Duties include teaching proper throwing and hitting mechanics, resulting
+  in increased performance by every player.
 \end{itemize}
 }
 \end{entrylist}
@@ -242,12 +226,11 @@ mechanics, resulting in increased performance by every player.
 %  INTERESTS SECTION
 %-------------------------------------------------------------------------------
 
-\section{Interests}
+\section{Interests and Activities}
 
 Programming, Computers \\
 Skiing, Snowboarding \\
 Baseball, Hockey, Lacrosse \\
-Guitar \\
 
 
 % Software Specific
