Updated Resume format

--- a/resume-no-phone.tex
+++ b/resume-no-phone.tex
@@ -47,7 +47,7 @@ Python
 \section{Computers and Programs}
 Computer Repair
 Git
-Linux (Ubuntu)
+Linux (CLI proficient)
 Microsoft Windows
 Vim
 \section{Electronics}
@@ -62,27 +62,42 @@ Soldering
 
 \begin{entrylist}
 
-\entry
-{May 2016--Aug 2016\\}
-{UBC {\normalfont Big Data Research}}
-{Vancouver, BC}
+\entryFirstPage
+{May 2016--Aug 2016}
+{UBC {\normalfont Big Data Research Assistant}}
+% {Vancouver, BC}
 {
 \begin{itemize}
 \item Goal: To share memory (RDDs) across Apache Spark instances through a
-unified memory manager.
+unified memory manager.\\
 \end{itemize}
 }
-\entry
-{Jan 2015--\\Aug 2015}
+\entryFirstPage
+{Jan 2015--Aug 2015}
 {Ericsson {\normalfont Software Developer Co-op}}
-{Burnaby, BC}
+% {Burnaby, BC}
 {
 \begin{itemize}
-\item Tested and developed quality of service and policy based routing software
-solutions on a variety of Ericsson's routing platforms using a combination of
-manual router configurations and scripts for testing.
-\item Presented demos showing the functionality and progress of policy based
-routing during the testing and development phases.
+\item Tested and developed quality of service and policy-based routing software
+solutions on a variety of Ericsson's enterprise scale routing platforms using a
+combination of manual router configurations and scripts for testing.
+\item Presented demos showing the functionality and progress of policy-based
+routing during the testing and development phases.\\
+\end{itemize}
+}
+\entryFirstPage
+{Summer 2014}
+{ByteCom Computer Services {\normalfont Computer Repair Technician}}
+% {Surrey, BC}
+{
+\begin{itemize}
+\item Repaired broken, slow, and non-responsive computers in a computer repair
+shop by replicating the customer’s problem, identifying the cause of the
+problem, and repairing the problem with the tools we had, resulting in satisfied
+customers.
+\item Techniques used to repair the computers include file and registry
+manipulations, and taking the computers apart to diagnose hardware problems,
+resulting in faster, and better working computers.
 \end{itemize}
 }
 \end{entrylist}
@@ -94,20 +109,20 @@ routing during the testing and development phases.
 
 \begin{entrylist}
 
-\entry
+\entryFirstPage
 {Nov 2017}
-  {Web Application {\normalfont Online Store}}
-{}
+{Web Application {\normalfont Online Store}}
+% {}
 {
 \begin{itemize}
 \item Built a web application that mimics an online store using AJAX requests
-and MongoDB
+and MongoDB.\\
 \end{itemize}
 }
-\entry
+\entryFirstPage
 {April 2017}
 {Capstone {\normalfont IoT Based Livestock Bio-Signal Monitoring and Management System}}
-{}
+% {}
 {
 \begin{itemize}
 \item Construct cattle eartags that comply with Canadian Cattle Identification
@@ -118,13 +133,13 @@ data to be transferred wirelessly through a mesh network of cattle to a gateway
 for further processing. The data is then displayed in a web application for the
 end users.
 \item This is designed to identify sick animals early to keep medical costs low
-and prevent more livestock from getting sick.
+and prevent more livestock from getting sick.\\
 \end{itemize}
 }
-\entry
+\entryFirstPage
 {April 2014}
 {Electromagnetically Tethered Robot}
-{}
+% {}
 {
 \begin{itemize}
 \item Constructed a robot using one solid piece of aluminum resulting in usable
@@ -139,29 +154,17 @@ forward, and parallel park.
 }
 \end{entrylist}
 
+\newgeometry{top=1.5cm,bottom=1.5cm,right=1.5cm,left=1.5cm}
+
 %-------------------------------------------------------------------------------
 %  Other Work Experience
 %-------------------------------------------------------------------------------
-\section{Other Work Experience}
+% \section{Other Work Experience}
 
-\begin{entrylist}
+% \begin{entrylist}
 
-\entry
-{Summer 2014}
-{ByteCom Computer Services {\normalfont Computer Repair Technician}}
-{Surrey, BC}
-{
-\begin{itemize}
-\item Fixed broken, slow, and non-responsive computers in a computer repair shop
-by replicating the customer’s problem, identifying the cause of the problem, and
-fixing the problem with the tools we had, resulting in satisfied customers.
-\item Techniques used to fix the computers include antivirus programs, file and
-registry manipulations, and taking the computers apart to diagnose hardware
-problems, resulting in faster, and better working computers.
-\end{itemize}
-}
 
-\end{entrylist}
+% \end{entrylist}
 
 %-------------------------------------------------------------------------------
 %  Volunteer Experience
@@ -173,7 +176,7 @@ problems, resulting in faster, and better working computers.
 \entry
 {2010--2013}
 {North Delta Baseball Association and Surrey Canadian Baseball Association {\normalfont Assistant Coach}}
-{North Delta, BC and Surrey, BC}
+% {North Delta, BC and Surrey, BC}
 {
 \begin{itemize}
 \item Coached range of age groups over a three season period.
@@ -192,16 +195,16 @@ problems, resulting in faster, and better working computers.
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2013--2017}
-{University of British Columbia}
-{Vancouver, BC}
-{Bachelor of Applied Science in Computer Engineering (Software Option)}
+{2013--Dec 2017}
+{University of British Columbia {\normalfont Vancouver, BC}}
+% {Vancouver, BC}
+{\\Bachelor of Applied Science in Computer Engineering (Software Option)}
 %------------------------------------------------
 \entry
 {2012--2013}
-{Kwantlen Polytechnic University} % {\normalfont of IT}}
-{Surrey, BC}
-{Engineering Certificate}
+  {Kwantlen Polytechnic University {\normalfont Surrey, BC}} % {\normalfont of IT}}
+% {Surrey, BC}
+{\\Engineering Certificate}
 \end{entrylist}
 
 % \newpage
@@ -228,9 +231,40 @@ problems, resulting in faster, and better working computers.
 
 \section{Interests and Activities}
 
-Programming, Computers \\
-Skiing, Snowboarding \\
-Baseball, Hockey, Lacrosse \\
+\begin{entrylist}
+\interest
+{
+\begin{itemize}
+\item Programming, contributing to open source projects and computers
+\item Encryption
+\item Cryptocurrencies and blockchain
+\item Computer and information security
+\item Network security including router configuration and VPNs.
+\item Configuring my Vim text editor so that it now has over 175,000 lines of
+additional configuration code and plugins which increases my productivity when
+coding and editing text.
+\item I perform all of my own car repairs and maintenance including:
+  \begin{itemize}
+    \item Repairing the starter motor
+    \item Replacing a leaking radiator
+    \item Performing brake changes
+    \item Diagnosing and repairing emissions controls systems (IAC and EVAP
+    emission control)
+    \item Replacing a door
+    \item fluid changes
+  \end{itemize}
+\item Created a script to solve a problem a relative had when inputting date
+block requests to their corporate computer program. My program worked so well
+that all the other employees in that department asked to use my program to
+streamline their date block requests as well.
+\item Skiing, Snowboarding
+\item Baseball, Hockey, Lacrosse
+\end{itemize}
+}
+\end{entrylist}
+
+  % I can add this once  Ihave actually done it
+  % my own car's engine etc and even designed my own Arduino microcontroller to control windshield wipers rather than buy the expensive OEM wiper motor controller (reverse engineered the OEM controller).
 
 
 % Software Specific
